releases/release_19_09_2019_14_40/dxvk-master/build.32/meson-logs/meson-log.txt
Build started at 2019-09-19T14:41:56.514621
Main binary: /usr/bin/python3
Python system: Linux
The Meson build system
Version: 0.45.1
Source dir: /home/aragmor/projects/d9vk
Build dir: /home/aragmor/projects/d9vk/releases/release_19_09_2019_14_40/dxvk-master/build.32
Build type: cross build
Project name: dxvk
Sanity testing C compiler: cc
Is cross compiler: False.
Sanity check compiler command line: cc /home/aragmor/projects/d9vk/releases/release_19_09_2019_14_40/dxvk-master/build.32/meson-private/sanitycheckc.c -o /home/aragmor/projects/d9vk/releases/release_19_09_2019_14_40/dxvk-master/build.32/meson-private/sanitycheckc.exe
Sanity check compile stdout:

-----
Sanity check compile stderr:

-----
Running test binary command: /home/aragmor/projects/d9vk/releases/release_19_09_2019_14_40/dxvk-master/build.32/meson-private/sanitycheckc.exe
Sanity testing C compiler: i686-w64-mingw32-gcc
Is cross compiler: True.
Sanity check compiler command line: i686-w64-mingw32-gcc -msse -msse2 -c /home/aragmor/projects/d9vk/releases/release_19_09_2019_14_40/dxvk-master/build.32/meson-private/sanitycheckc.c -o /home/aragmor/projects/d9vk/releases/release_19_09_2019_14_40/dxvk-master/build.32/meson-private/sanitycheckc_cross.exe
Sanity check compile stdout:

-----
Sanity check compile stderr:

-----
Native C compiler: cc (gcc 7.4.0 "cc (Ubuntu 7.4.0-1ubuntu1~18.04.1) 7.4.0")
Cross C compiler: i686-w64-mingw32-gcc (gcc 7.3.0)
Sanity testing C++ compiler: c++
Is cross compiler: False.
Sanity check compiler command line: c++ /home/aragmor/projects/d9vk/releases/release_19_09_2019_14_40/dxvk-master/build.32/meson-private/sanitycheckcpp.cc -o /home/aragmor/projects/d9vk/releases/release_19_09_2019_14_40/dxvk-master/build.32/meson-private/sanitycheckcpp.exe
Sanity check compile stdout:

-----
Sanity check compile stderr:

-----
Running test binary command: /home/aragmor/projects/d9vk/releases/release_19_09_2019_14_40/dxvk-master/build.32/meson-private/sanitycheckcpp.exe
Sanity testing C++ compiler: i686-w64-mingw32-g++
Is cross compiler: True.
Sanity check compiler command line: i686-w64-mingw32-g++ -msse -msse2 -c /home/aragmor/projects/d9vk/releases/release_19_09_2019_14_40/dxvk-master/build.32/meson-private/sanitycheckcpp.cc -o /home/aragmor/projects/d9vk/releases/release_19_09_2019_14_40/dxvk-master/build.32/meson-private/sanitycheckcpp_cross.exe
Sanity check compile stdout:

-----
Sanity check compile stderr:

-----
Native C++ compiler: c++ (gcc 7.4.0 "c++ (Ubuntu 7.4.0-1ubuntu1~18.04.1) 7.4.0")
Cross C++ compiler: i686-w64-mingw32-g++ (gcc 7.3.0)
Host machine cpu family: x86
Host machine cpu: x86
Target machine cpu family: x86
Target machine cpu: x86
Build machine cpu family: x86_64
Build machine cpu: x86_64
Running compile:
Working directory:  /tmp/tmp1i_qrhzz
Command line:  i686-w64-mingw32-g++ /tmp/tmp1i_qrhzz/testfile.cpp -msse -msse2 -O0 -fpermissive -Wl,--start-group -Wl,--start-group -lkernel32 -luser32 -lgdi32 -lwinspool -lshell32 -lole32 -loleaut32 -luuid -lcomdlg32 -ladvapi32 -Wl,--end-group -Wl,--end-group -pipe -c -o /tmp/tmp1i_qrhzz/output.obj 

Code:
 #ifndef __WINE__
#error 1
#endif
Compiler stdout:
 
Compiler stderr:
 /tmp/tmp1i_qrhzz/testfile.cpp:2:2: error: #error 1
 #error 1
  ^~~~~

Checking if "winelib check" compiles: NO
Program i686-w64-mingw32-windres found: YES (/usr/bin/i686-w64-mingw32-windres)
Library vulkan-1 found: YES
Running compile:
Working directory:  /tmp/tmpir_d_zxg
Command line:  i686-w64-mingw32-g++ /tmp/tmpir_d_zxg/testfile.cpp -msse -msse2 -static -static-libgcc -static-libstdc++ -Wl,--add-stdcall-alias,--enable-stdcall-fixup -O0 -fpermissive -Wl,--start-group -ld3d9 -Wl,--end-group -pipe -o /tmp/tmpir_d_zxg/output.exe 

Code:
 int main(int argc, char **argv) { return 0; }
Compiler stdout:
 
Compiler stderr:
 
Library d3d9 found: YES
Running compile:
Working directory:  /tmp/tmp_9vm766s
Command line:  i686-w64-mingw32-g++ /tmp/tmp_9vm766s/testfile.cpp -msse -msse2 -static -static-libgcc -static-libstdc++ -Wl,--add-stdcall-alias,--enable-stdcall-fixup -O0 -fpermissive -Wl,--start-group -ld3d11 -Wl,--end-group -pipe -o /tmp/tmp_9vm766s/output.exe 

Code:
 int main(int argc, char **argv) { return 0; }
Compiler stdout:
 
Compiler stderr:
 
Library d3d11 found: YES
Running compile:
Working directory:  /tmp/tmp8k56okll
Command line:  i686-w64-mingw32-g++ /tmp/tmp8k56okll/testfile.cpp -msse -msse2 -static -static-libgcc -static-libstdc++ -Wl,--add-stdcall-alias,--enable-stdcall-fixup -O0 -fpermissive -Wl,--start-group -ldxgi -Wl,--end-group -pipe -o /tmp/tmp8k56okll/output.exe 

Code:
 int main(int argc, char **argv) { return 0; }
Compiler stdout:
 
Compiler stderr:
 
Library dxgi found: YES
Library d3dcompiler_43 found: YES
Running compile:
Working directory:  /tmp/tmpclo_trb2
Command line:  i686-w64-mingw32-g++ /tmp/tmpclo_trb2/testfile.cpp -msse -msse2 -static -static-libgcc -static-libstdc++ -Wl,--add-stdcall-alias,--enable-stdcall-fixup -O0 -fpermissive -Wl,--start-group -ld3dcompiler_47 -Wl,--end-group -pipe -o /tmp/tmpclo_trb2/output.exe 

Code:
 int main(int argc, char **argv) { return 0; }
Compiler stdout:
 
Compiler stderr:
 
Library d3dcompiler_47 found: YES
Program glslangValidator found: YES (/home/aragmor/projects/d9vk/glslangValidator)
Dependency threads found: YES
Dependency threads found: YES (cached)
Build targets in project: 13
Found ninja-1.8.2 at /usr/bin/ninja
